src/objects/Complaint_Action__c.object
<CustomObject>
    <description>IDFS Complaint process</description>
    <fields>
        <fullName>Action_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case to take action</description>
        <label>Action Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related complaint actions</relationshipLabel>
        <relationshipName>Related_complaint_action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <description>IDFS Complaint process</description>
        <label>Action Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remittance &amp; Settlement</fullName>
                </value>
                <value>
                    <fullName>Accreditation</fullName>
                </value>
                <value>
                    <fullName>Agency Risk Management</fullName>
                </value>
                <value>
                    <fullName>Invoicing &amp; Collection</fullName>
                </value>
                <value>
                    <fullName>Reporting &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Local Office</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>System Support</fullName>
                </value>
                <value>
                    <fullName>Other IATA Division</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Airline Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>IDFS complaint process</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info Request</fullName>
                </value>
                <value>
                    <fullName>Investigation Request</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Correct / Update Data</fullName>
                </value>
                <value>
                    <fullName>Rerun / Re-Send Data</fullName>
                </value>
                <value>
                    <fullName>Other Task Request</fullName>
                </value>
                <value>
                    <fullName>Issue Credit / Debit Note</fullName>
                </value>
                <value>
                    <fullName>Review Invoicing File</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Feedback Request</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>IDFS complaint process</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>IDFS complaint process</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Case__c</fullName>
        <description>Case that hols the complaint</description>
        <label>Complaint Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaint Actions</relationshipLabel>
        <relationshipName>Complaint_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Complaint Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA{000000}</displayFormat>
        <label>Complaint Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>